Fixed the overlap of bottom content on the video show page. Moved the bottom bar out of the play overlay so that you can see it even when not fullscreened

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -155,6 +155,7 @@ iframe.sample-video {
 .breakpoint-table {
     width: 100%;
     margin-top: 20px;
+    margin-bottom: 70px;
     font-size: 120%;
 }
 
