--- a/www/css/youtube.css
+++ b/www/css/youtube.css
@@ -128,6 +128,7 @@ span.yt_forward { left: inherit; }
     bottom: 0;
     position: absolute;
     width: 100%;
+    z-index: 15;
 }
 label.current_time {
     float: left;
